# weather

./: .gitignore  Cargo.toml  README.md
.github/workflows/: general_rust.yml
src/: error.rs  main.rs
src/api/: mod.rs  provider_api.rs
src/providers/: accuweather_api.rs  mod.rs  openweather_api.rs
src/storage/: json_storage.rs  mod.rs  storage_api.rs
