[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4.22", features = ["serde"] }
thiserror = "1.0.34"
rprompt = "1.0.5"
typetag = "0.2.3"
dyn-clone = "1.0.9"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
once_cell = "1.14.0"